tools/book_service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-service
  labels:
    app: book-service
    tier: backend
    version: v1
spec:
  selector:
    matchLabels:
      app: book-service
  replicas: 2
  template:
    metadata:
      labels:
        app: book-service
    spec:
      containers:
      - name: book-service
        image: localhost:32000/book-service
        ports:
        - containerPort: 8083
