tools/book_service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /book_collection
          pathType: Prefix
          backend:
            service:
              name: book-service
              port:
                number: 8083
